@@ -1,3 +1,15 @@
+2013-10-14  Vincent Celier  <celier@adacore.com>
+
+	* prj-attr.adb: New attributes in package Clean:
+	Artifacts_In_Exec_Dir, Artifacts_In_Object_Dir.
+	* prj-nmsc.adb (Process_Clean (Attributes)): New
+	procedure to process attributes Artifacts_In_Exec_Dir and
+	Artifacts_In_Object_Dir in package Clean.
+	* prj.ads (Project_Configuration): New components
+	Artifacts_In_Exec_Dir and Artifacts_In_Object_Dir.
+	* snames.ads-tmpl: New standard names Artifacts_In_Exec_Dir and
+	Artifacts_In_Object_Dir used only by gprclean.
+
 2013-10-14  Robert Dewar  <dewar@adacore.com>
 
 	* exp_attr.adb (Expand_N_Attribute_Reference): Add error
